# gtemp1w

gtemp1w/: Makefile.am  configure.ac
gtemp1w/src/: Makefile.am  callbacks.c  callbacks.h  config.txt  config_1.txt  configuration.c  configuration.h  display_add_plot.c  display_add_plot.h  general_settings.c  general_settings.h  linlamp.glade  linlamp_old  main.c  measures.c  measures.h  popup_menu.c  popup_menu.h  sample_load_save.c  sample_load_save.h  sensor_read_thread.c  sensor_read_thread.h  sensors.c  sensors.h  t_display.c  t_display.h  t_display_alphanumeric.c  t_display_alphanumeric.h  t_panel.c  t_panel.h  t_plot.c  t_plot.h  t_sensor.c  t_sensor.h
